@@ -5,7 +5,6 @@ import kr.co.proten.llmops.api.document.entity.Metadata;
 import kr.co.proten.llmops.core.helpers.DateUtil;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static kr.co.proten.llmops.core.helpers.UUIDGenerator.generateUUID;
@@ -39,11 +38,10 @@ public class DocumentBuilder {
             .mapToObj(i -> buildDocument(
                 knowledgeName,
                 docId,
-                i + 1, // chunkId는 문서에서 청크된 순서
+                i + 1L, // chunkId는 문서에서 청크된 순서
                 chunks.get(i), 
-                embeddings != null ? embeddings.get(i) : null
-            ))
-            .collect(Collectors.toList());
+                embeddings != null ? embeddings.get(i) : null)
+            ).toList();
     }
     
     private void validateInput(List<String> chunks, List<List<Double>> embeddings) {
